--- a/index.html
+++ b/index.html
@@ -23,6 +23,55 @@
     <source src="background-music.mp3" type="audio/mpeg">
 </audio>
 
+<!-- Overlay (to hide content) -->
+<div id="loading-overlay">
+    <div class="loading-bar">
+        <div class="loading-progress"></div>
+    </div>
+    <div class="loading-text">Loading... Please wait</div>
+</div>
+
+<div class="container">
+    <div class="carousel-container">
+        <h2 class="carousel-heading">Recent Games Played</h2>
+        <div class="carousel">
+            <div class="carousel-track">
+                <!-- Game 1 -->
+                <div class="carousel-item">
+                    <img src="https://github.com/Sealient/Stats/blob/main/game1.png?raw=true" class="game-image" alt="Game 1">
+                </div>
+                <!-- Game 2 -->
+                <div class="carousel-item">
+                    <img src="https://github.com/Sealient/Stats/blob/main/game2.jpg?raw=true" class="game-image" alt="Game 2">
+                </div>
+                <!-- Game 3 -->
+                <div class="carousel-item">
+                    <img src="https://github.com/Sealient/Stats/blob/main/game3.jpg?raw=true" class="game-image" alt="Game 3">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="carousel-container">
+        <h2 class="carousel-heading">Game Clips Showcase</h2>
+        <div class="carousel">
+            <div class="carousel-track">
+                <!-- Clip 1 -->
+                <div class="carousel-item">
+                    <a> Video Coming Soon... </a>
+                </div>
+                <!-- Clip 2 -->
+                <div class="carousel-item">
+                    <a> Video Coming Soon... </a>
+                </div>
+                <!-- Clip 3 -->
+                <div class="carousel-item">
+                    <a> Video Coming Soon... </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
     <div class="container">
         <div class="card">
