--- a/index.html
+++ b/index.html
@@ -58,15 +58,20 @@
             <div class="carousel-track">
                 <!-- Clip 1 -->
                 <div class="carousel-item">
-                    <a> Video Coming Soon... </a>
+                    <a style="
+    color: violet;
+"> Video Coming Soon... </a>
                 </div>
                 <!-- Clip 2 -->
                 <div class="carousel-item">
-                    <a> Video Coming Soon... </a>
-                </div>
+                    <a style="
+    color: violet;
+"> Video Coming Soon... </a>                </div>
                 <!-- Clip 3 -->
                 <div class="carousel-item">
-                    <a> Video Coming Soon... </a>
+                    <a style="
+    color: violet;
+"> Video Coming Soon... </a>
                 </div>
             </div>
         </div>
