--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         <h2>FEATURED <span class="accent">CONTENT</span></h2>
         <div class="project-grid">
             <div class="project-card">
-                <div class="project-image" style="background-image: url('images/streaming-setup.png'); background-size: contain; background-position: center;"></div>
+                <div class="project-image" style="background-image: url('Images/streaming-setup.png'); background-size: contain; background-position: center;"></div>
                 <h3>LIVE STREAMING</h3>
                 <p>Broadcasting gaming sessions and engaging with my audience in real-time. Join the fun!</p>
             </div>
             <div class="project-card">
-                <div class="project-image" style="background-image: url('images/content-creation.png'); background-size: contain; background-position: center;"></div>
+                <div class="project-image" style="background-image: url('Images/content-creation.png'); background-size: contain; background-position: center;"></div>
                 <h3>VIDEO CREATION</h3>
                 <p>Crafting high-energy gameplay videos, tutorials, and content that entertain and inform.</p>
             </div>
             <div class="project-card">
-                <div class="project-image" style="background-image: url('images/gameplay-highlight.png'); background-size: contain; background-position: center;"></div>
+                <div class="project-image" style="background-image: url('Images/gameplay-highlight.png'); background-size: contain; background-position: center;"></div>
                 <h3>GAMING MOMENTS</h3>
                 <p>Capturing epic gaming moments and creating highlights to share with my community.</p>
             </div>
