--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
           <div class="carousel-card" data-title="Artwork 5" style="background-image:url('https://i.imgur.com/QSJLPvw.jpeg');">
             <div class="carousel-caption">Anime-style portrait with a furry friend! This is my 13th drawing, working on composition and soft shading. The cat was a fun challenge!</div>
           </div>
+          <div class="carousel-card" data-title="Artwork 6" style="background-image:url('https://i.imgur.com/OjBEy8y.jpeg');">
+            <div class="carousel-caption">The demon's gaze. My 14th drawing ever—focused on capturing sharp horns, dynamic hair, and a strong, unsettling expression. Loved playing with the dark shading!</div>
+          </div>
           </div>
           <button class="carousel-btn right" id="next-btn" aria-label="Next">&#8250;</button>
         </div>
@@ -970,4 +973,5 @@ window.addEventListener("resize", enforceScreenRange);</script>
 
 </body>
 </html>
+
 
